not yet fixed. will report to it later

--- a/environment.yml
+++ b/environment.yml
@@ -29,7 +29,7 @@ dependencies:
   - certifi=2025.4.26
   - cffi=1.17.1
   - charset-normalizer=3.3.2
-  - clearml
+  - clearml=1.17.2
   - click=8.1.8
   - colorama=0.4.6
   - comm=0.2.1
